FIxing styling/font size/spacing on practical applications - font was too large and everything felt smushed. Made text smaller and fixed header position accordingly.

--- a/css/theme/source/cuttlesoft.scss
+++ b/css/theme/source/cuttlesoft.scss
@@ -81,8 +81,9 @@ section.has-light-background {
     }
 
     .applications {
+        font-size: 40px;
         &__header {
-            top: -25px;
+            top: -40px;
         }
     }
 
